change file name

--- a/search/google.html
+++ b/search/google.html
@@ -10,22 +10,20 @@
 </head>
 
 <body>
-    <div class="">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Advance</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </div>
+    <ul class="nav">
+        <li class="nav-item">
+            <a class="nav-link active" aria-current="true" href="#">Active</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        </li>
+    </ul>
 
     <div class="main">
         <!-- Google Image -->
@@ -40,6 +38,11 @@
             <span class="fa fa-search form-control-feedback"></span>
             <input type="text" class="form-control" placeholder="Search">
         </div>
+
+        <center>
+            <button type="button" class="btn btn-light">Google Search</button>
+            <button type="button" class="btn btn-light">I'm Feeling Lucky</button>
+        </center>
 
         <p class="mt-4 text-center">Google offered in: <a href="https://www.google.com.eg/setprefs?sig=0_c3Ts12ybPv5ercuc9La46RTyY6o%3D&hl=en&source=homepage&sa=X&ved=0ahUKEwiB0uC5kfTtAhUE1xoKHcxJCI8Q2ZgBCA8">English</a></p>
 
