--- a/search/advance.html
+++ b/search/advance.html
@@ -5,6 +5,7 @@
     <title>Search</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" type="image/x-icon" href="img/google.png" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 </head>
@@ -13,10 +14,10 @@
     <div class="top_bar">
         <ul class="nav">
             <li class="nav-item">
-                <a class="nav-link" href="#">Image</a>
+                <a class="nav-link" href="image.html">Image</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Advance</a>
+                <a class="nav-link" href="google.html">Google</a>
             </li>
         </ul>
     </div>
