--- a/search/image.html
+++ b/search/image.html
@@ -2,9 +2,10 @@
 <html>
 
 <head>
-    <title>Search</title>
+    <title>Google Images</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" type="image/x-icon" href="img/google.png" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 </head>
@@ -13,10 +14,10 @@
     <div class="top_bar">
         <ul class="nav">
             <li class="nav-item">
-                <a class="nav-link" href="#">Image</a>
+                <a class="nav-link" href="google.html">Google</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Advance</a>
+                <a class="nav-link" href="advance.html">Advance</a>
             </li>
         </ul>
     </div>
@@ -25,27 +26,21 @@
         <!-- Google Image -->
         <center>
             <img alt="Google" height="92" id="hplogo" src="https://www.google.com.eg/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" width="272">
+            <div class="goimg">
+                <span>images</span>
+            </div>
         </center>
 
         <div style="height: 30px;"></div>
-
-        <!-- Search Input -->
-        <form class="form-group has-search" action="https://google.com/search">
-            <span class="fa fa-search form-control-feedback"></span>
-            <input type="text" class="form-control" placeholder="Search" name="q">
+        <form class="has-search" action="https://google.com/search">
+            <div>
+                <span class="fa fa-search form-control-feedback seico"></span>
+                <input class="search " type="text" name="q">
+            </div>
+            <input class="btn btn-light" type="submit" value="Google Search">
         </form>
-
-        <center>
-            <button type="button" class="btn btn-light">Google Search</button>
-            <button type="button" class="btn btn-light">I'm Feeling Lucky</button>
-        </center>
-
+        <div style="height: 30px;"></div>
         <p class="mt-4 text-center">Google offered in: <a href="#">English</a></p>
-
-    </div>
-
-    <div class="mid_body">
-
     </div>
 </body>
 
