--- a/search/advance.html
+++ b/search/advance.html
@@ -22,30 +22,41 @@
         </ul>
     </div>
 
+    <span class="adsearch">Advanced Search</span>
+    <div class="gy3Eif"></div>
     <div class="main">
-        <!-- Google Image -->
-        <center>
-            <img alt="Google" height="92" id="hplogo" src="https://www.google.com.eg/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" width="272">
-        </center>
 
         <div style="height: 30px;"></div>
+        <center class="lbltxt">
+            <form class="form-group has-search" action="https://google.com/search">
+                <div class="row mb-1">
+                    <label for="colFormLabel" class="col-sm-3 col-form-label">all these words:</label>
+                    <div class="col-sm-5">
+                        <input type="text" class="form-control form-control-sm" id="colFormLabel">
+                    </div>
+                    <label for="colFormLabel" class="col-sm-4 col-form-label lbltxt">Type the important words: tri-colour rat terrier</label>
 
-        <!-- Search Input -->
-        <form class="form-group has-search" action="https://google.com/search">
-            <span class="fa fa-search form-control-feedback"></span>
-            <input type="text" class="form-control" placeholder="Search" name="q">
-        </form>
+                    <label for="colFormLabel" class="col-sm-3 col-form-label">this exact word or phrase:</label>
+                    <div class="col-sm-5">
+                        <input type="text" class="form-control form-control-sm" id="colFormLabel">
+                    </div>
+                    <label for="colFormLabel" class="col-sm-4 col-form-label lbltxt">Put exact words in quotes: "rat terrier"</label>
 
-        <center>
-            <button type="button" class="btn btn-light">Google Search</button>
-            <button type="button" class="btn btn-light">I'm Feeling Lucky</button>
+                    <label for="colFormLabel" class="col-sm-3 col-form-label">any of these words:</label>
+                    <div class="col-sm-5">
+                        <input type="text" class="form-control form-control-sm" id="colFormLabel">
+                    </div>
+                    <label for="colFormLabel" class="col-sm-4 col-form-label lbltxt">Type OR between all the words you want: miniature OR standard</label>
+
+                    <label for="colFormLabel" class="col-sm-3 col-form-label">none of these words:</label>
+                    <div class="col-sm-5">
+                        <input type="text" class="form-control form-control-sm" id="colFormLabel">
+                    </div>
+                    <label for="colFormLabel" class="col-sm-4 col-form-label lbltxt">Put a minus sign just before words that you don't want: -rodent, -"Jack Russell"</label>
+                </div>
+            </form>
         </center>
-
-        <p class="mt-4 text-center">Google offered in: <a href="#">English</a></p>
-
-    </div>
-
-    <div class="mid_body">
+        <p class="mt-4 text-center ">Google offered in: <a href="# ">English</a></p>
 
     </div>
 </body>
