--- a/search/image.html
+++ b/search/image.html
@@ -32,7 +32,7 @@
         </center>
 
         <div style="height: 30px;"></div>
-        <form class="has-search" action="https://google.com/search">
+        <form class="has-search" action="https://images.google.com/images">
             <div>
                 <span class="fa fa-search form-control-feedback seico"></span>
                 <input class="search " type="text" name="q">
