--- a/search/advance.html
+++ b/search/advance.html
@@ -32,28 +32,29 @@
                 <div class="row mb-1">
                     <label for="colFormLabel" class="col-sm-3 col-form-label">all these words:</label>
                     <div class="col-sm-5">
-                        <input type="text" class="form-control form-control-sm" id="colFormLabel">
+                        <input type="text" class="form-control form-control-sm" id="colFormLabel" name="as_q">
                     </div>
                     <label for="colFormLabel" class="col-sm-4 col-form-label lbltxt">Type the important words: tri-colour rat terrier</label>
 
                     <label for="colFormLabel" class="col-sm-3 col-form-label">this exact word or phrase:</label>
                     <div class="col-sm-5">
-                        <input type="text" class="form-control form-control-sm" id="colFormLabel">
+                        <input type="text" class="form-control form-control-sm" id="colFormLabel" name="as_epq">
                     </div>
                     <label for="colFormLabel" class="col-sm-4 col-form-label lbltxt">Put exact words in quotes: "rat terrier"</label>
 
                     <label for="colFormLabel" class="col-sm-3 col-form-label">any of these words:</label>
                     <div class="col-sm-5">
-                        <input type="text" class="form-control form-control-sm" id="colFormLabel">
+                        <input type="text" class="form-control form-control-sm" id="colFormLabel" name="as_oq">
                     </div>
                     <label for="colFormLabel" class="col-sm-4 col-form-label lbltxt">Type OR between all the words you want: miniature OR standard</label>
 
                     <label for="colFormLabel" class="col-sm-3 col-form-label">none of these words:</label>
                     <div class="col-sm-5">
-                        <input type="text" class="form-control form-control-sm" id="colFormLabel">
+                        <input type="text" class="form-control form-control-sm" id="colFormLabel" name="as_eq">
                     </div>
                     <label for="colFormLabel" class="col-sm-4 col-form-label lbltxt">Put a minus sign just before words that you don't want: -rodent, -"Jack Russell"</label>
                 </div>
+                <input class="btn btn-light" type="submit" value="Advanced Search">
             </form>
         </center>
         <p class="mt-4 text-center ">Google offered in: <a href="# ">English</a></p>
