update all files

--- a/search/advance.html
+++ b/search/advance.html
@@ -12,14 +12,28 @@
 
 <body>
     <div class="top_bar">
-        <ul class="nav">
+        <span>
+            <img alt="Google" height="40" src="https://www.google.com.eg/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" width="80">
+        </span>
+        <ul class="nav justify-content-end nav-pills">
+            <li class="nav-item">
+                <a class="nav-link" href="google.html">Google</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="image.html">Images</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Sign in</a>
+            </li>
+        </ul>
+        <!-- <ul class="nav">
             <li class="nav-item">
                 <a class="nav-link" href="image.html">Image</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="google.html">Google</a>
             </li>
-        </ul>
+        </ul> -->
     </div>
 
     <span class="adsearch">Advanced Search</span>
@@ -54,7 +68,7 @@
                     </div>
                     <label for="colFormLabel" class="col-sm-4 col-form-label lbltxt">Put a minus sign just before words that you don't want: -rodent, -"Jack Russell"</label>
                 </div>
-                <input class="btn btn-light" type="submit" value="Advanced Search">
+                <input class="btn btn-primary" type="submit" value="Advanced Search">
             </form>
         </center>
         <p class="mt-4 text-center ">Google offered in: <a href="# ">English</a></p>
