--- a/search/image.html
+++ b/search/image.html
@@ -12,14 +12,25 @@
 
 <body>
     <div class="top_bar">
-        <ul class="nav">
+        <ul class="nav justify-content-end nav-pills">
+            <li class="nav-item">
+                <a class="nav-link" href="google.html">Google</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="advance.html">Advanced</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Sign in</a>
+            </li>
+        </ul>
+        <!-- <ul class="nav">
             <li class="nav-item">
                 <a class="nav-link" href="google.html">Google</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="advance.html">Advance</a>
             </li>
-        </ul>
+        </ul> -->
     </div>
 
     <div class="main">
@@ -37,7 +48,10 @@
                 <span class="fa fa-search form-control-feedback seico"></span>
                 <input class="search " type="text" name="q">
             </div>
-            <input class="btn btn-light" type="submit" value="Google Search">
+            <div class="text-center">
+                <input class="btn btn-light" type="submit" value="Google Search">
+            </div>
+
         </form>
         <div style="height: 30px;"></div>
         <p class="mt-4 text-center">Google offered in: <a href="#">English</a></p>
